# memo.barrucadu.co.uk

./: .gitignore  .gitmodules  Jenkinsfile  build  flake.nix  hakyll.hs  local-build.sh  memo.cabal  pandoc-filter-sidenote  pandoc-filter-transform-code  post-pleroma-status  requirements-freeze.txt  requirements.txt  stack.yaml  style.css
.github/: dependabot.yml
_templates/: _layout.html  _list_sidebar.html  _memo_list.html  _person.html  _taxon_tree.html  _toc_tree.html  atom.xml  error.html  index.html  list.html  memo.html  robots.txt  sitemap.xml
concourse/: Dockerfile  Dockerfile.builder  pipeline.yml
css/: code.css  style.css
errors/: 410.markdown
hashed-static/: style.css
memos/: 100-prisoners.lhs  2018-budget.markdown  a-govuk-incident.markdown  a-new-kind-of-imageboard.markdown  a-nice-cup-of-tea.markdown  academic-mindset.markdown  ai-dungeon-the-red-sign.markdown  alternate-datatype-representations.lhs  apotheosis-session-notes.markdown  at-home-for-one-year.markdown  automatically-tagging-music.markdown  backups.markdown  bad-interview-questions.markdown  benchmarking-wsgi-servers.markdown  blub-crisis.markdown  boardgames.markdown  book-wishlist.markdown  c-is-not-turing-complete.markdown  call-of-cthulhu-dice-rolls.markdown  call-of-cthulhu-spell-reference.markdown  campaign-ideas.markdown  campaign-notes-2018-09-masks-of-nyarlathotep.markdown  campaign-notes-2020-02-apocalypse-world.markdown  campaign-notes-2020-04-golden-sky-stories.markdown  campaign-notes-2020-05-call-of-cthulhu.markdown  campaign-notes-2021-10-traveller.markdown  (+320 more)
(+38 files in other folders)
