name:                memo
version:             0.0.0.0
synopsis:            Memorandums
homepage:            https://memo.barrucadu.co.uk
author:              Michael Walker
maintainer:          mike@barrucadu.co.uk
build-type:          Simple
cabal-version:       >=1.10

executable hakyll
  main-is:             hakyll.hs
  build-depends:       base >=4.7 && <5, hakyll, pandoc, pandoc-sidenote, pandoc-types, process, temporary, time, witherable
  default-language:    Haskell2010
  ghc-options:         -Wall
